# promptsagainsthumanity

./: .pdm.toml  main.py  pyproject.toml
front/: package-lock.json  package.json
front/src/: App.svelte
