[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Sven Hendrikx", email = "sven_hendrikx@hotmail.com"},
]
dependencies = [
    "fastapi>=0.95.0",
    "uvicorn>=0.21.1",
    "langchain>=0.0.134",
    "openai>=0.27.4",
]
requires-python = ">=3.10"
license = {text = "MIT"}
